outs/out_com6261077
Traceback (most recent call last):
  File "gpt2train.py", line 5, in <module>
    from combined.gpt2_train import run
  File "/scratch/mll469/gpt2deeplr/combined/gpt2_train.py", line 69
    
    ^
SyntaxError: invalid syntax
